<resources>
    <string name="app_name">My Application</string>
    <string name="Login">Login</string>
    <string name="Registro">Registro</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Nombr">Nombre Usuario</string>
    <string name="Sexo">Sexo</string>
    <string name="Nacionalidad">Nacionalidad</string>
    <string name="Aficiones">Aficiones</string>
    <string name="Cancelar">Cancelar</string>
    <string name = "H">H</string>
    <string name = "M">M</string>
    <string-array name="Nacionalidades">
        <item>Argentina</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Peru</item>
        <item>Uruguay</item>
    </string-array>
    <string name="Tenis">Tenis</string>
    <string name="Futbol">Futbol</string>
    <string name="CV">CV Resumido</string>
    <string name="Registrar">Registrar</string>
    <string name="Bienvenido">Bienvenido</string>
</resources>